added different nav  button

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.navbar-toggler-bar {
+  width: 20px;
+  height: 1px;
+  background-color: white;
+  margin: 6px 0;
+  transition: all 0.2s ease-out;
+}
+.collapsed .navbar-toggler-bar.first-bar {
+  transform: rotate(0deg) translate(0%, 0%);
+}
+.collapsed .navbar-toggler-bar.second-bar {
+  display: block;
+}
+.collapsed .navbar-toggler-bar.third-bar {
+  transform: rotate(0deg) translate(0%, 0%);
+}
+.navbar-toggler-bar.first-bar {
+  transform: rotate(45deg) translate(18%, 100%);
+}
+.navbar-toggler-bar.second-bar {
+  display: none;
+}
+.navbar-toggler-bar.third-bar {
+  transform: rotate(-45deg) translate(18%, -100%);
+}
